--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Левчанский Величанский</title>
+  <title>Артемий Залупений</title>
   <style>
     @keyframes neonBackground {
       0% {
@@ -123,13 +123,13 @@
 <body>
   <div class="container">
     <img class="hero-img" src="drowned.jpg" alt="Левчанский Величанский" />
-    <h1>Левчанский Величанский</h1>
+    <h1>Артемий Залупений</h1>
     <p class="quote">
       Д͓е͓н͓ь͓г͓и͓ — э͓т͓о͓ т͓е͓н͓и͓.<br /> 
 О͓н͓и͓ г͓о͓р͓я͓т͓ в͓ р͓у͓к͓а͓х͓ <br />
        н͓о͓ б͓е͓з͓ н͓и͓х͓ — х͓о͓л͓о͓д͓н͓о͓..
     </p>
-    <a class="telegram-button" href="https://t.me/P_R_A_V_E_D_N_Y_I" target="_blank">Telegram</a>
+    <a class="telegram-button" href="https://t.me/Zpudnl" target="_blank">Telegram</a>
   </div>
   <footer>&copy; 2025 Левчанский Величанский</footer>
 </body>
